# ImageManager

./: CMakeLists.txt
include/: Image.h  ImageManager.h
include/template/: Parameter.h
src/: Image.cpp  ImageManager.cpp
